final touch to make it deployment

--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -36,8 +36,8 @@
   }
   
   .filters {
-    background-color: #343a40;
-    color: white;
+    background-color: #0B2447;
+    color: #A5D7E8;
     padding: 20px;
     display: flex;
     flex-direction: column;
